SNRGY-2297 add ahead field to time
